--- a/frontend/src/components/NewsSection/NewsSection.module.scss
+++ b/frontend/src/components/NewsSection/NewsSection.module.scss
@@ -14,7 +14,7 @@
     gap: vw(14);
     text-align: right;
     width: 100%;
-    margin-bottom: vw(74);
+    margin-bottom: vw(57);
     // padding-left: vw(50);
 }
 
@@ -52,8 +52,7 @@
 .headerCTA {
     display: flex;
     // flex-direction: row;
-    // align-items: center;
-    // justify-content: center;
+
     gap: vw(22);
     // width: 100%;
     // margin-top: vw(60);
@@ -84,20 +83,20 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 1rem;
+    // padding: 1rem;
     // width: 100%;
     width: vw(447);
-    border-right: 2px solid #EFEFEF;
+    border-right: 1px solid rgba(0, 0, 0, 0.5);
 
     svg {
         align-self: flex-end;
+        margin-inline-end: vw(32);
     }
 }
 
 .cardImage {
     width: 100%;
     object-fit: cover;
-    margin-bottom: vw(32)
 }
 
 .content {
